--- a/hello-next/package.json
+++ b/hello-next/package.json
@@ -1,7 +1,6 @@
 {
   "name": "hello-next",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "next",
@@ -15,5 +14,7 @@
     "next": "^9.3.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
