--- a/hello-next/package.json
+++ b/hello-next/package.json
@@ -1,11 +1,13 @@
 {
   "name": "hello-next",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "yarn build && yarn export"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +16,5 @@
     "next": "^9.3.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
-  },
-  "devDependencies": {},
-  "description": ""
+  }
 }
