build fille in package json

--- a/hello-next/package.json
+++ b/hello-next/package.json
@@ -7,7 +7,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "export": "yarn build && yarn export"
+    "export": "yarn build && next export"
   },
   "keywords": [],
   "author": "",
